RESOLVED FIXED276617
[WebGPU] setBindGroup does not remove dynamic offsets in repeated calls to setBindGroup
https://bugs.webkit.org/show_bug.cgi?id=276617
Summary [WebGPU] setBindGroup does not remove dynamic offsets in repeated calls to se...
Mike Wyrzykowski
Reported 2024-07-15 10:15:14 PDT
[WebGPU] setBindGroup does not remove dynamic offsets in repeated calls to setBindGroup
Attachments
Mike Wyrzykowski
Comment 1 2024-07-15 10:15:28 PDT
Mike Wyrzykowski
Comment 2 2024-07-15 10:18:36 PDT
EWS
Comment 3 2024-07-17 08:46:30 PDT
Committed 281055@main (6eef85d192a8): <https://commits.webkit.org/281055@main> Reviewed commits have been landed. Closing PR #30828 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.