errorValidatingDynamicOffsets can be bypassed in setBindGroup https://bugs.webkit.org/show_bug.cgi?id=276617 <radar://131764000>

Reviewed by Tadeu Zagallo.

We should call remove on the dynamic offsets when one
does not exist, otherwise the behavior of a draw call may
not be what is expected. We may honor the draw call, when
it should have been rejected by validation.

* Source/WebGPU/WebGPU/ComputePassEncoder.mm:
(WebGPU::ComputePassEncoder::setBindGroup):
* Source/WebGPU/WebGPU/RenderPassEncoder.mm:
(WebGPU::RenderPassEncoder::setBindGroup):

Canonical link: https://commits.webkit.org/281055@main